# EstoquePersistido

./: .env.example  .gitignore  README.md  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3f3bf3f35a31_initial_schema.py  41c1e18df0f3_creating_client_table.py  b01c465dace3_creating_payment_order_item_order_and_.py  d1744d6794d9_removed_unit_price_association_table.py
app/: main.py
app/controller/: controllerCliente.py  controllerPagamento.py  controllerPedido.py
app/crud/: client_crud.py  order_crud.py  payment_crud.py  product_crud.py
app/db/: database.py
app/dto/: PedidoDTO.py
app/models/: Client.py  Fornecedor.py  Payment.py  Pedido.py  client.py  order.py  order_item.py  payment.py  product.py  product_order.py
app/repository/: ClientRepository.py  FornecedorRepository.py  PaymentRepository.py  PedidoRepository.py
app/routers/: client_router.py  home_router.py  order_router.py  payment_router.py  product_router.py  routers.py
app/schemas/: client_update.py  order_create.py  order_update.py  payment_update.py  read_order_schema.py
app/service/: PaymentService.py
app/services/: ClientService.py  FornecedorService.py  PedidoService.py  client_service.py  order_service.py  payment_service.py  product_service.py
