[project]
name = "trabalho1-persistencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic>=1.17.2",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "click==8.3.0",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "h11==0.16.0",
    "idna==3.11",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.6",
    "pytz==2025.2",
    "ruff>=0.14.9",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlmodel>=0.0.27",
    "starlette==0.27.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.24.0",
]
